kubeflow/manifests/authorizationpolicy-profiles-kfam.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  labels:
    kustomize.component: profiles
  name: profiles-kfam
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/kubeflow/sa/centraldashboard
  selector:
    matchLabels:
      kustomize.component: profiles
